--- a/css/styles.css
+++ b/css/styles.css
@@ -496,3 +496,63 @@ body {
   margin-left: 16px;
   fill: white;
   }
+  .modal-window{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(46,47,66,0.4);
+    transition:opasity 250ms cubic-bezier(0.4,0,0.2,1);
+    visibility: 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.modal-container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12),0px 2px 1px rgba(0,0,0,0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4,0,0.2,1);
+  padding: 72px 24px 24px 24px;
+}
+.win-button{
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgb(0,0,0,0.1);
+  padding: 0px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1), border-color 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.win-button:hover,
+.win-button:focus{
+  background-color: #404bbf;
+  border:none;
+}
+.win-svg{
+  transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.win-button:hover .win-svg,
+.win-button:focus .win-svg{
+  fill: #ffffff;
+}
+.name-parag{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
+}
