--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ body {
   margin-bottom: 8px;
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
 }
 .sectwo-svg {
   color: #ffffff;
@@ -252,7 +252,7 @@ body {
 }
 .team-ul {
   display: flex;
-  gap: 24px; 
+  gap: 24px;
   padding: 0;
 }
 .team-list {
@@ -349,16 +349,17 @@ body {
   display: inline-block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.row-li:hover{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.row-li:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.row-wrap{
+.row-wrap {
   position: relative;
   overflow: hidden;
 }
-.row-text{
+.row-text {
   position: absolute;
-  top:0;
+  top: 0;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
@@ -370,10 +371,10 @@ body {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.row-wrap:hover .row-text{
+.row-wrap:hover .row-text {
   transform: translateY(0);
 }
-.product-list{
+.product-list {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
@@ -393,7 +394,7 @@ body {
   display: flex;
   align-items: baseline;
 }
-.footer-wrap{
+.footer-wrap {
   margin-right: 120px;
 }
 .logo-two {
@@ -413,10 +414,10 @@ body {
   letter-spacing: 0.02em;
   max-width: 264px;
 }
-.footer-socials-wrap{
+.footer-socials-wrap {
   max-width: 208px;
 }
-.footer-socials-title{
+.footer-socials-title {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   line-height: 1.5;
@@ -424,31 +425,31 @@ body {
   color: #ffffff;
   margin-bottom: 16px;
 }
-.footer-socials-list{
+.footer-socials-list {
   display: flex;
   gap: 16px;
 }
-.footer-socials-link{
+.footer-socials-link {
   display: flex;
   background-color: #4d5ae5;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
   width: 40px;
-  height: 40px; 
+  height: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-socials-icon{
-  fill:#f4f4fd;
+.footer-socials-icon {
+  fill: #f4f4fd;
 }
-.footer-socials-link:hover{
+.footer-socials-link:hover {
   background-color: #31d0aa;
 }
 .footer-socials-link:active,
-.footer-socials-link:focus{
+.footer-socials-link:focus {
   background-color: #31d0aa;
 }
-.modal-text{
+.modal-text {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -456,12 +457,12 @@ body {
   letter-spacing: 0.02em;
   color: #ffffff;
 }
-.modal-form{
+.modal-form {
   display: flex;
   justify-content: space-between;
   gap: 24px;
 }
-.modal-email{
+.modal-email {
   width: 264px;
   height: 40px;
   border: 1px solid #ffffff;
@@ -470,11 +471,11 @@ body {
   line-height: 2;
   letter-spacing: 0.04em;
   padding-left: 16px;
-  box-shadow: 0px 4px 4px rgba(0,0,0,0.15);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  color:#ffffff;
+  color: #ffffff;
 }
-.modal-button{
+.modal-button {
   min-width: 165px;
   height: 40px;
   display: flex;
@@ -492,21 +493,21 @@ body {
   border: none;
   border-radius: 4px;
 }
-.modal-svg{
+.modal-svg {
   margin-left: 16px;
   fill: white;
-  }
-  .modal-window{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; 
-    background-color: rgba(46,47,66,0.4);
-    transition:opasity 250ms cubic-bezier(0.4,0,0.2,1);
-    visibility: 250ms cubic-bezier(0.4,0,0.2,1);
 }
-.modal-container{
+.modal-window {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-container {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -514,12 +515,13 @@ body {
   width: 408px;
   min-height: 584px;
   background-color: #fcfcfc;
-  box-shadow: 0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12),0px 2px 1px rgba(0,0,0,0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4,0,0.2,1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
 }
-.win-button{
+.close-win {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -530,24 +532,25 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #e7e9fc;
-  border: 1px solid rgb(0,0,0,0.1);
+  border: 1px solid rgb(0, 0, 0, 0.1);
   padding: 0px;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1), border-color 250ms cubic-bezier(0.4,0,0.2,1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.win-button:hover,
-.win-button:focus{
+.close-win:hover,
+.close-win:focus {
   background-color: #404bbf;
-  border:none;
+  border: none;
 }
-.win-svg{
-  transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
+.close-svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.win-button:hover .win-svg,
-.win-button:focus .win-svg{
+.close-win:hover .win-svg,
+.close-win:focus .win-svg {
   fill: #ffffff;
 }
-.name-parag{
+.title-win {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -555,4 +558,61 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 16px;
+}
+.user-div{
+  margin-bottom: 8px;
+}
+.user-label{
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+.user-wrap{
+  position: relative;
+}
+.user-input{
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46,47,66,0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-input:focus{
+  border-color:  #4d5ae5;
+}
+.user-svg{
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.user-input:focus + .user-svg{
+  fill: #4d5ae5;
+}
+.a{
+  margin-bottom: 16px;
+}
+.comment-text{
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border: 1px solid rgba(46,47,66,0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.comment-text:focus{
+  border-color:  #4d5ae5;
 }
