--- a/css/styles.css
+++ b/css/styles.css
@@ -546,8 +546,8 @@ body {
 .close-svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-win:hover .win-svg,
-.close-win:focus .win-svg {
+.close-win:hover .close-svg,
+.close-win:focus .close-svg {
   fill: #ffffff;
 }
 .title-win {
@@ -581,7 +581,7 @@ body {
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .user-input:focus{
   border-color:  #4d5ae5;
@@ -597,9 +597,7 @@ body {
 .user-input:focus + .user-svg{
   fill: #4d5ae5;
 }
-.a{
-  margin-bottom: 16px;
-}
+
 .comment-text{
   width: 100%;
   height: 120px;
@@ -615,4 +613,7 @@ body {
 }
 .comment-text:focus{
   border-color:  #4d5ae5;
+}
+.form:last-child{
+  margin-bottom: 16px;
 }
