--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,9 @@ body {
   background-color: transparent;
   padding: 8px 16px;
   outline: transparent;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
 }
 .comment-text:focus{
   border-color:  #4d5ae5;
