--- a/css/styles.css
+++ b/css/styles.css
@@ -616,6 +616,6 @@ body {
 .comment-text:focus{
   border-color:  #4d5ae5;
 }
-.form:last-child{
+.form:nth-last-child(4){
   margin-bottom: 16px;
 }
