--- a/css/styles.css
+++ b/css/styles.css
@@ -559,10 +559,10 @@ body {
   color: #2e2f42;
   margin-bottom: 16px;
 }
-.user-div{
+.user-div {
   margin-bottom: 8px;
 }
-.user-label{
+.user-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -570,41 +570,40 @@ body {
   display: block;
   margin-bottom: 4px;
 }
-.user-wrap{
+.user-wrap {
   position: relative;
 }
-.user-input{
+.user-input {
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(46,47,66,0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.user-input:focus{
-  border-color:  #4d5ae5;
+.user-input:focus {
+  border-color: #4d5ae5;
 }
-.user-svg{
+.user-svg {
   position: absolute;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
-.user-input:focus + .user-svg{
+.user-input:focus + .user-svg {
   fill: #4d5ae5;
 }
 
-.comment-text{
+.comment-text {
   width: 100%;
   height: 120px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  border: 1px solid rgba(46,47,66,0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   padding: 8px 16px;
@@ -613,9 +612,37 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
 }
-.comment-text:focus{
-  border-color:  #4d5ae5;
+.comment-text:focus {
+  border-color: #4d5ae5;
 }
-.form:nth-last-child(4){
+.form:nth-last-child(4) {
   margin-bottom: 16px;
+}
+.win-checkbox {
+  margin-bottom: 24px;
+}
+.privacy-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.privacy-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.privacy-svg {
+  min-width: 169px;
+  height: 56px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
