--- a/css/styles.css
+++ b/css/styles.css
@@ -650,10 +650,11 @@ body {
   color: #ffffff;
   cursor: pointer;
   border: none;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.privacy-input:checked + .privacy-span {
-  background-color: #4d5ae5;
+.privacy-input:checked  .privacy-span {
+  background-color: #404bbf;
   border: none;
   fill:#f4f4fd;
 }
