--- a/css/styles.css
+++ b/css/styles.css
@@ -562,6 +562,9 @@ body {
 .user-div {
   margin-bottom: 8px;
 }
+form .user-div:nth-child(4) {
+  margin-bottom: 16px;
+}
 .user-label {
   font-size: 12px;
   line-height: 1.17;
@@ -593,7 +596,7 @@ body {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.user-input:focus + .user-svg {
+.user-input:focus .user-svg {
   fill: #4d5ae5;
 }
 
