--- a/css/styles.css
+++ b/css/styles.css
@@ -596,7 +596,7 @@ form .user-div:nth-child(4) {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.user-input:focus .user-svg {
+.user-input:focus + .user-svg {
   fill: #4d5ae5;
 }
 
