--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ form .user-div:nth-child(4) {
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.privacy-input:checked  {
+.privacy-input:checked + .privacy-span {
   background-color: #404bbf;
   border: none;
   fill:#f4f4fd;
