--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,8 @@ form .user-div:nth-child(4) {
 .win-checkbox {
   margin-bottom: 24px;
 }
-.privacy-label {
+.privacy-label,
+.privacy-link {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -655,6 +656,9 @@ form .user-div:nth-child(4) {
   border: none;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.privacy-input{
+  display:block;
 }
 .privacy-input:checked + .privacy-span {
   background-color: #404bbf;
