--- a/css/styles.css
+++ b/css/styles.css
@@ -624,8 +624,7 @@ form .user-div:nth-child(4) {
 .win-checkbox {
   margin-bottom: 24px;
 }
-.privacy-label,
-.privacy-link {
+.privacy-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -636,13 +635,15 @@ form .user-div:nth-child(4) {
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
 }
-.win-send{
+.win-send {
   display: block;
   min-width: 169px;
   height: 56px;
@@ -657,14 +658,17 @@ form .user-div:nth-child(4) {
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.privacy-input{
-  display:block;
+.privacy-input {
+  display: block;
 }
 .privacy-input:checked + .privacy-span {
   background-color: #404bbf;
   border: none;
-  fill:#f4f4fd;
+  fill: #f4f4fd;
 }
-.privacy-link{
-  color:#4d5ae5;
+.privacy-link {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
 }
