--- a/css/styles.css
+++ b/css/styles.css
@@ -645,6 +645,8 @@ form .user-div:nth-child(4) {
 }
 .win-send {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
   min-width: 169px;
   height: 56px;
   font-family: 'Roboto', sans-serif;
